adjustment and controller 'link'