@@ -12,19 +12,24 @@ import org.springframework.stereotype.Service;
 
 @Service
 public class LinkService {
-    
+
     @Autowired
     LinkRepository repository;
 
-    public Link save(Link link){
+    public Link save(Link link) {
 
-        return repository.save(link);
+        try {
+            return repository.save(link);
+        } catch (Exception e) {
+            throw new NullPointerException("Esse link não existe");
+        }
     }
-    public List<Link> findLinkUser(Long user){
+
+    public List<Link> findLinkUser(Long user) {
         return repository.findByUserLinkId(user);
     }
-    
-    public Link findLinkId(Long user,Long idLink){
+
+    public Link findLinkId(Long user, Long idLink) {
         var links = findLinkUser(user);
         for (Link link : links) {
             if (link.getId() == idLink) {
@@ -33,7 +38,8 @@ public class LinkService {
         }
         return null;
     }
-    public Link findLinkUrl(Long user,String url){
+
+    public Link findLinkUrl(Long user, String url) {
         var links = findLinkUser(user);
         for (Link link : links) {
             if (link.getUrlOriginal().equals(url)) {
@@ -42,31 +48,37 @@ public class LinkService {
         }
         return null;
     }
-    public Link findLinkShortUrl(Long user,String shortUrl){
+
+    public Link findLinkShortUrl(Long user, String shortUrl) {
         var links = findLinkUser(user);
         for (Link link : links) {
             if (link.getUrlShort().equals(shortUrl)) {
                 return link;
             }
         }
-        return null;
+        throw new NullPointerException("Esse link não existe");
     }
-    public void deleteLink(Link link){
+
+    public void deleteLink(Link link) {
         repository.delete(link);
     }
-    public void disableLink(Link link){
+
+    public void disableLink(Link link) {
         link.setStatus(false);
         save(link);
     }
-    public void reactivateLink(Link link){
+
+    public void reactivateLink(Link link) {
         link.setStatus(true);
         save(link);
     }
-    public void addAcess(Link link){
-        link.setCounterAccess(link.getCounterAccess()+1);
+
+    public void addAcess(Link link) {
+        link.setCounterAccess(link.getCounterAccess() + 1);
         save(link);
     }
-    public String accessLink(String shortLink){
+
+    public String accessLink(String shortLink) {
         Long user = Long.parseLong(shortLink.substring(10, shortLink.length()));
         Link link = findLinkShortUrl(user, shortLink.substring(0, 10));
 
@@ -74,18 +86,19 @@ public class LinkService {
 
         return link.getUrlOriginal();
     }
-    public String shortener(String url,Long id){
+
+    public String shortener(String url, Long id) {
         try {
             MessageDigest md = MessageDigest.getInstance("SHA-1");
             byte[] digest = md.digest(url.getBytes(StandardCharsets.UTF_8));
             StringBuilder sb = new StringBuilder();
             for (byte b : digest) {
-                sb.append(String.format("%02x", b));
+                sb.append("%02x".formatted(b));
             }
-            return sb.toString().substring(0,10)+id.toString();
+            return sb.toString().substring(0, 10) + id.toString();
         } catch (NoSuchAlgorithmException e) {
-               e.printStackTrace();
-               return null;
+            e.printStackTrace();
+            return null;
         }
     }
 }
